[package]
name = "ssri"
version = "7.0.1-alpha.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2018"
description = "Various utilities for handling Subresource Integrity."
license = "Apache-2.0"
repository = "https://github.com/zkat/ssri-rs"
homepage = "https://github.com/zkat/ssri-rs"
readme = "README.md"

[dependencies]
sha2 = "0.10.6"
base64 = "0.21.0"
digest = "0.10.6"
sha-1 = "0.10.1"
hex = "0.4.3"
serde = { version = "1.0.152", optional = true }
thiserror = "1.0.38"

[features]
default = ["serde"]

[dev-dependencies]
serde_json = "1.0.93"
serde_derive = "1.0.152"
